flux/infrastructure/mimir/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mimir
  annotations: 
    linkerd.io/inject: disabled
