flux/infrastructure/mimir/mimir-tenant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir-tenant
  namespace: mimir
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mimir-tenant
  template:
    metadata:
      labels:
        app: mimir-tenant
    spec:
      serviceAccountName: image-pull-sa
      containers:
      - name: mimir-tenant
        image: ${artifact_registry_path}cortex-tenant:main-c07f3fe4
        imagePullPolicy: Always
        # command: [ "/bin/bash", "-c", "--" ]
        # args: [ "while true; do sleep 30; done;" ] #Prevent from premature exit
        volumeMounts:
        - name: config-volume
          mountPath: /data/config
      volumes:
      - name: config-volume
        configMap:
          name: mimir-tenant-cm
---
apiVersion: v1
kind: Service
metadata:
  name: mimir-tenant
  namespace: mimir
spec:
  type: ClusterIP
  selector:
    app: mimir-tenant
  ports:
  - port: 80
    targetPort: 8080
